# Hyper-X-Project

./: .replit  replit.nix  y  y.pub  yes.txt
Hyper-X/: Cargo.toml  package-lock.json
Hyper-X/dex-ui/: app.js  index.html  styles.css
Hyper-X/explorer-ui/: app.js  index.html
Hyper-X/mobile-wallet/: pubspec.yml
Hyper-X/mobile-wallet/android/app/src/main/: AndroidManifest.xml
Hyper-X/mobile-wallet/lib/: main.dart  nft_screen.dart  transaction_service.dart  wallet_screen.dart
Hyper-X/nft-ui/: app.js  index.html  styles.css
Hyper-X/src/: consensus.rs  crosschain.rs  cryptography.rs  dex.rs  exchange_integration.rs  explorer.rs  governance.rs  main.rs  monitoring.rs  nft_marketplace.rs  p2p.rs  smart_contracts.rs  storage.rs  tokenomics.rs  transactions.rs  wallet.rs
Hyper-X/testnet/: docker-compose.yml  monitoring_setup.sh  validator_nodes.sh
Hyper-X/wallet-ui/: app.js  index.html
