[package]
name = "hyper-x"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
blake2 = "0.10"
sha3 = "0.10"
libp2p = { version = "0.50", features = ["tcp-tokio", "mdns", "quic", "noise", "yamux", "gossipsub"] }
futures = "0.3"
wasmer = "3.1"
zk-snarks = "0.5"
pqcrypto = { version = "0.2", features = ["dilithium", "frodo"] }
web3 = "0.18"
solana-client = "1.14"
actix-web = "4"
